--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "8.4.38",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "recharts": "^2.12.7",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
     "use-debounce": "^10.0.1",
