--- a/package.json
+++ b/package.json
@@ -7,18 +7,26 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "next": "15.0.0-rc.0",
+    "date": "^2.0.5",
+    "eslint-config-next": "^14.2.5",
+    "lucide-react": "^0.407.0",
+    "next": "^14.2.5",
     "next-auth": "5.0.0-beta.19",
+    "pg": "^8.12.0",
     "postcss": "8.4.38",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.5.2",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
